can deactive looping

--- a/conf.example.yaml
+++ b/conf.example.yaml
@@ -33,9 +33,6 @@ filterDisk:
 
 ovhSubsidiary: FR
 
-# how many seconds before a refresh
-sleepsecs: 20
-
 showPrompt: True
 # show the CPU type if available (unless showFqn=true)
 showCpu: False
@@ -51,16 +48,31 @@ showFqn: False
 # set to False if you want to actually buy the servers
 fakeBuy: True
 
+# Loop?
+# If True, the script loops every 'sleepsecs' seconds
+# and does the monitoring (email sending)
+# If False, it displays the list of servers once
+# and let you choose.
+loop: False
+
+# how many seconds before a refresh (if loop = True)
+sleepsecs: 20
+
 # email sending (email_on = False deactivate all emails)
 email_on: False
+
 # Send an email at startup (for test maybe)
 email_at_startup: False
+
 # Send email if something is added or removed on the
 # availability endpoint during a run
+# (only if loop = True)
 email_added_removed: False
+
 # Monitor availability of servers whose FQN starts with a string
 # This is a "super" FQN which has the datacenter at the end
 # The server must pass the filters (filterName and filterDisk)
+# (only if loop = True)
 email_availability_monitor:
     # NVMe KS-4 with 32g RAM in GRA
     - 24sk40.ram-32g-ecc-2133.softraid-2x450nvme.gra
@@ -68,6 +80,7 @@ email_availability_monitor:
     - 24sk40.ram-32g-ecc-2133.softraid-2x450nvme
     # Any KS-4
     - 24sk40
+
 # email server details
 email_server_port: 587
 email_server_name: "my.server.com"
