--- a/conf.example.yaml
+++ b/conf.example.yaml
@@ -86,6 +86,10 @@ email_availability_monitor:
     # Any KS-4
     - 24sk40
 
+# Checks if any server was added to the catalog
+# These must pass the filters
+email_catalog_monitor: False
+
 # email server details
 email_server_port: 587
 email_server_name: "my.server.com"
