read the tax rate from the catalog

--- a/conf.example.yaml
+++ b/conf.example.yaml
@@ -35,8 +35,8 @@ maxPrice: 100
 
 ovhSubsidiary: FR
 
-# VAT in percents
-percentVAT: 20
+# add the VAT to the price?
+addVAT: True
 
 # show a helpful prompt after the list of server
 showPrompt: True
